--- a/androidsimplestatelayout/build.gradle
+++ b/androidsimplestatelayout/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'com.github.masam-technologies:AndroidSimpleLoadingView:0.1'
+    implementation 'com.github.masam-technologies:AndroidSimpleLoadingView:v0.1'
 }
